--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^2.0.2",
     "natural": "^8.1.0",
     "nodemailer": "^7.0.11",
+    "pdf-parse": "^1.1.1",
     "prisma": "^5.22.0",
     "stopword": "^3.1.5"
   },
@@ -36,6 +37,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^25.0.3",
+    "@types/pdf-parse": "^1.1.5",
     "@types/stopword": "^2.0.3",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
