--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^7.0.11",
     "pdf-parse": "^1.1.1",
     "prisma": "^5.22.0",
+    "serverless-http": "^4.0.0",
     "stopword": "^3.1.5"
   },
   "devDependencies": {
