--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,11 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/api/(.*)",
+      "dest": "api/index.ts"
+    },
+     {
+      "src": "/",
       "dest": "api/index.ts"
     }
   ]
