--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.local.ts",
+    "dev": "ts-node-dev --respawn --transpile-only api/index.local.ts",
     "build": "prisma generate",
     "postinstall": "prisma generate"
   },
